# ErrorDetection

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
docs/: code_distribution.md
examples/bit-reverse/: README.md  clusters.sav  solutions_pt.csv
examples/bit-reverse/test/: 1.c  2.c  3.c  4.c
extractor/: CMakeLists.txt  extractor.h  main.cpp  threadPool.h  treeSitter.h
frontend/ast/: CMakeLists.txt  main.cpp
frontend/error_detection/: CMakeLists.txt  highlight.h  main.cpp  predict.py
include/: CMakeLists.txt
include/config/: CMakeLists.txt
include/config/ArgParser/: Config.h
include/config/Dataset/: Config.h
include/extractor/: Extractor.h
include/support/ArgParser/: ArgParser.h
include/support/Database/: Metadata.h
include/support/Support/: Support.h
include/support/ThreadPool/: ThreadPool.h  ThreadSafeQueue.h
include/support/TreeSitter/: TreeSitter.h
include/visualizer/: Marker.h
lib/: CMakeLists.txt
lib/extractor/: CMakeLists.txt  Extractor.cpp
lib/support/: CMakeLists.txt
lib/support/ArgParser/: ArgParser.cpp  CMakeLists.txt
lib/support/Database/: CMakeLists.txt  Metadata.cpp
lib/support/Support/: CMakeLists.txt  Support.cpp
lib/support/ThreadPool/: CMakeLists.txt  ThreadPool.cpp
lib/support/TreeSitter/: CMakeLists.txt  TreeSitter.cpp
lib/visualizer/: CMakeLists.txt  Marker.cpp
model/: code2vec.py  common.py  config.py  model_base.py  path_context_reader.py  preprocess.py  tensorflow_model.py  vocabularies.py
tools/: CMakeLists.txt  extract.cpp  preprocess.cpp  testmarker.cpp
